--- a/html/js.html
+++ b/html/js.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Webpage Design</title>
+    <title>JAVASCRIPT</title>
     <link rel="stylesheet" href="../style.css">
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous"> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
@@ -23,29 +23,20 @@
                     <li><a href="#">CONTACT</a></li>
                 </ul>
             </div>
-
-            <!-- <div class="search">
-                <input class="srch" type="search" name="" placeholder="Type To text">
-                <a href="#"> <button class="btn">Search</button></a>
-            </div> -->
-
         </div> 
         <div class="content">
             
                 <div class="def">
                     <h1><span  style="color:rgba(228,189,0,205);">JAVASCRIPT</span> </h1><BR>
-                        <!-- <button class="cn"><a href="#">LEARN MORE</a></button> -->
                         <p class="par">Web development languages are used to build websites and web applications.<br> There are several languages used in web development, each with its own purpose and strengths. Here's a brief description of the most popular web development languages:
                             HTML, CSS, JAVASCRIPT
                         </p>
                         <button class="cn js" ><a href="css.html">Previous</a></button>
                 </div>
                 <div class="form">
-                    <!-- <h2>HTML 5</h2> -->
                     <img src="../images/js1.png" class="img">
                 </div>
         </div>
-        
     </div>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 </body>
